fix UI when the admin bar is visible

--- a/assets/js/blocks/mini-cart/style.scss
+++ b/assets/js/blocks/mini-cart/style.scss
@@ -212,3 +212,17 @@ h2.wc-block-mini-cart__title {
 		}
 	}
 }
+
+.admin-bar .wp-block-woocommerce-mini-cart-contents {
+	margin-top: 32px;
+}
+
+.admin-bar .wp-block-woocommerce-mini-cart-contents,
+.admin-bar .wp-block-woocommerce-empty-mini-cart-contents-block,
+.admin-bar .wp-block-woocommerce-filled-mini-cart-contents-block {
+	height: calc(100vh - 32px);
+}
+
+.admin-bar .wc-block-components-drawer .components-modal__header .components-button {
+	top: 32px;
+}
